airflow-setup/airflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow
  namespace: default
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: airflow
  type: ClusterIP
