airflow-setup/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
spec:
  rules:
    - host: 127.0.0.1
      http:
        paths:
          - path: /airflow
            pathType: Prefix
            backend:
              service:
                name: airflow
                port:
                  number: 8080
